# aggregate

./: .gitmodules  README.rst  abs.yaml  anaconda-cloud-auth-feedstock.yaml  build-order.sh  build.py  build.sh  build_order_linux-64  cf_feedstock_commits.json  cf_feedstocks_tracked.txt  conda_build_config-dbg.yaml  conda_build_config-dbg_c-dbg_py.yaml  conda_build_config-dbg_c-dbg_py_win-32.yaml  conda_build_config-dbg_c-dbg_py_win-64.yaml  conda_build_config-dbg_win-32.yaml  conda_build_config-dbg_win-64.yaml  conda_build_config-osize.yaml  conda_build_config-win-32.yaml  conda_build_config-win-64.yaml  conda_build_config-win64.yaml  conda_build_config.macos-10.10.yaml  conda_build_config.yaml  conda_build_config_cf.yaml  conda_build_config_with27.yaml  cos7-ppc64le-cdt-order.txt  cos7-ppc65le-cdt-order.txt  cutensor-feedstock.yaml  debug-this.sh  git-format-patch-le.py  git_s_fe_add_all_commit_rebase_push.sh  git_s_fe_check_fix_status.sh  git_s_fe_checkout_pull_rebase.sh  jaxlib-feedstock.yaml  libxslt-feedstock.yaml  make-mixed-crlf-patch.py  manifest.yaml  openjpeg-feedstock.yaml  prefect-test-dependency-feedstock.yaml  pytest-replay-feedstock.yaml  python-order.sh  (+7 more)
.githooks/: pre-commit
aext-share-notebook-server-feedstock/: .gitattributes  .gitignore  LICENSE  README.md  abs.yaml
alsa-lib-cos6-i686/: meta.yaml
alsa-lib-cos6-x86_64/: meta.yaml
alsa-lib-cos7-ppc64le/: meta.yaml
alsa-lib-devel-cos6-i686/: meta.yaml
alsa-lib-devel-cos6-x86_64/: meta.yaml
alsa-lib-devel-cos7-ppc64le/: meta.yaml
alsa-utils-cos6-i686/: meta.yaml
alsa-utils-cos6-x86_64/: meta.yaml
alsa-utils-cos7-ppc64le/: meta.yaml
apr-feedstock/recipe/cmake/apr-iconv/: CMakeLists.txt
at-spi-cos6-i686/: meta.yaml
at-spi-cos6-x86_64/: meta.yaml
at-spi-devel-cos6-i686/: meta.yaml
at-spi-devel-cos6-x86_64/: build.sh  meta.yaml
atk-cos6-i686/: meta.yaml
atk-cos6-x86_64/: meta.yaml
atk-cos7-ppc64le/: meta.yaml
atk-devel-cos6-i686/: meta.yaml
atk-devel-cos6-x86_64/: meta.yaml
atk-devel-cos7-ppc64le/: meta.yaml
audit-libs-cos6-i686/: meta.yaml
audit-libs-cos6-x86_64/: meta.yaml
avahi-libs-cos6-i686/: meta.yaml
avahi-libs-cos6-x86_64/: meta.yaml
ca-certificates-cos6-i686/: meta.yaml
ca-certificates-cos6-x86_64/: meta.yaml
ca-certificates-cos7-ppc64le/: meta.yaml
cairo-cos6-i686/: meta.yaml
cairo-cos6-x86_64/: meta.yaml
cairo-cos7-ppc64le/: meta.yaml
cairo-devel-cos6-i686/: meta.yaml
cairo-devel-cos6-x86_64/: meta.yaml
cairo-devel-cos7-ppc64le/: meta.yaml
centos-release-cos7-ppc64le/: meta.yaml
cheetah3-feedstock/: .drone.yml  .travis.yml  README.md
chkconfig-cos7-ppc64le/: meta.yaml
clang/: activate-clang++.sh  activate-clang.sh  activate.sh  build.sh  deactivate-clang++.sh  deactivate-clang.sh  install-clang.sh  meta.yaml
clang-dbg/: activate-clang++.sh  activate-clang.sh  build.sh  deactivate-clang++.sh  deactivate-clang.sh  meta.yaml
copy-jdk-configs-cos6-i686/: meta.yaml
copy-jdk-configs-cos6-x86_64/: meta.yaml
copy-jdk-configs-cos7-ppc64le/: meta.yaml
cracklib-cos6-i686/: meta.yaml
cracklib-cos6-x86_64/: meta.yaml
cracklib-dicts-cos6-i686/: meta.yaml
cracklib-dicts-cos6-x86_64/: meta.yaml
cups-devel-cos6-i686/: meta.yaml
cups-devel-cos6-x86_64/: build.sh  meta.yaml
cups-libs-cos6-i686/: meta.yaml
cups-libs-cos6-x86_64/: meta.yaml
cupti-cuda11.3/: build.sh  meta.yaml
cython-blis-feedstock/: README.md  conda-forge.yml
dash-core-components-feedstock/: README.md  conda-forge.yml
dash-feedstock/: README.md  conda-forge.yml
dash-html-components-feedstock/: README.md  conda-forge.yml
dash-renderer-feedstock/: README.md  conda-forge.yml
dash-table-feedstock/: README.md  conda-forge.yml
db4-cos6-i686/: meta.yaml
db4-cos6-x86_64/: meta.yaml
db4-cxx-cos6-i686/: meta.yaml
db4-cxx-cos6-x86_64/: meta.yaml
db4-devel-cos6-i686/: meta.yaml
db4-devel-cos6-x86_64/: meta.yaml
distlib-feedstock/: README.md
dm-tree/: bld.bat  build_win.sh  conda_build_config.yml  meta.yaml
expat-cos6-i686/: build.sh  meta.yaml
expat-cos6-x86_64/: meta.yaml
expat-cos7-ppc64le/: meta.yaml
expat-devel-cos6-i686/: meta.yaml
expat-devel-cos6-x86_64/: meta.yaml
expat-devel-cos7-ppc64le/: meta.yaml
font-ttf-dejavu-sans-mono-feedstock/: build.sh
font-ttf-inconsolata-feedstock/: build.sh
font-ttf-ubuntu-feedstock/: build.sh
fontconfig-cos6-i686/: meta.yaml
fontconfig-cos6-x86_64/: meta.yaml
fontconfig-cos7-ppc64le/: meta.yaml
fontconfig-devel-cos6-i686/: meta.yaml
fontconfig-devel-cos6-x86_64/: meta.yaml
fontconfig-devel-cos7-ppc64le/: meta.yaml
fonts-anaconda-feedstock/: meta.yaml
freetype-cos6-i686/: meta.yaml
freetype-cos6-x86_64/: meta.yaml
freetype-devel-cos6-i686/: build.sh  meta.yaml
freetype-devel-cos6-x86_64/: meta.yaml
freetype-devel-cos7-ppc64le/: meta.yaml
fribidi-feedstock/: build.sh  meta.yaml
gconf2-cos6-i686/: meta.yaml
gconf2-cos6-x86_64/: meta.yaml
gconf2-cos7-ppc64le/: meta.yaml
gdk-pixbuf2-cos6-i686/: meta.yaml
gdk-pixbuf2-cos6-x86_64/: meta.yaml
gdk-pixbuf2-devel-cos6-i686/: meta.yaml
gdk-pixbuf2-devel-cos6-x86_64/: meta.yaml
gettext-common-devel-cos7-ppc64le/: meta.yaml
gettext-cos6-i686/: meta.yaml
gettext-cos6-x86_64/: meta.yaml
gettext-cos7-ppc64le/: meta.yaml
gettext-devel-cos6-i686/: meta.yaml
gettext-devel-cos6-x86_64/: meta.yaml
gettext-devel-cos7-ppc64le/: meta.yaml
gettext-libs-cos6-i686/: meta.yaml
gettext-libs-cos6-x86_64/: meta.yaml
sirius-cuda-test-feedstock/src/: CMakeLists.txt  cuda_test.cu  setup.py
sirius-cuda-test-feedstock/src/sirius_cuda_test/: __init__.py
(+1824 files in other folders)
